--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,3 @@
-baseurl=http://localhost:8080
+baseurl=http://localhost:8088
+basepath=/search
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
